--- a/ChatAppWeb/WebContent/login.html
+++ b/ChatAppWeb/WebContent/login.html
@@ -4,8 +4,8 @@
             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
 			{{errorMessage}}
 		</div>
-		<input type="text" ng-model="user.username" placeholder="Username" class="form-control" required><br><br>
-		<input type="password" ng-model="user.password" placeholder="Password" class="form-control" required><br>
+		<input type="text" ng-model="username" placeholder="Username" class="form-control" required><br><br>
+		<input type="password" ng-model="password" placeholder="Password" class="form-control" required><br>
 		<input type="submit" value="Log in" class="btn btn-primary">
 	</form>
 </div>
