--- a/ChatAppWeb/WebContent/chat.html
+++ b/ChatAppWeb/WebContent/chat.html
@@ -1,3 +1,10 @@
-<div ng-controller = "authController">
-	<h1>Hello from chat {{test}}</h1>
+<div ng-controller = "chatController">
+	
+	<textarea class="form-control" rows="5" cols="50" id="loggedUsers" readonly="true"></textarea>
+	<textarea class="form-control" rows="20" cols="50" id="messages" readonly="true"></textarea>
+	
+	<form data-ng-controller="authController" ng-submit="sendMessage()">
+		<input type="text" ng-model="message" placeholder="Message" class="form-control" required>
+		<input type="submit" value="Send" class="btn btn-primary">
+	</form>
 </div>
