--- a/ChatAppWeb/WebContent/index.html
+++ b/ChatAppWeb/WebContent/index.html
@@ -10,6 +10,7 @@
       	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular-resource.js"></script>
       	<script src="chat.js"></script>
       	<script src="controllers.js"></script>
+      	<link rel="stylesheet" type="text/css" href="chat.css"></script>
       	<!-- Optional theme -->
       	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
       	<title>Chat App</title>
