--- a/ChatAppWeb/WebContent/chat.html
+++ b/ChatAppWeb/WebContent/chat.html
@@ -1,9 +1,13 @@
 <div ng-controller = "chatController">
 	
-	<textarea class="form-control" rows="5" cols="50" id="loggedUsers" readonly="true"></textarea>
+	<button type="button" class="btn btn-default" ng-click="logout()">Logout</button>
+	
+	<textarea class="form-control" rows="5" cols="50" id="loggedUsers" readonly="true">
+		
+	</textarea>
 	<textarea class="form-control" rows="20" cols="50" id="messages" readonly="true"></textarea>
 	
-	<form data-ng-controller="authController" ng-submit="sendMessage()">
+	<form ng-submit="sendMessage()">
 		<input type="text" ng-model="message" placeholder="Message" class="form-control" required>
 		<input type="submit" value="Send" class="btn btn-primary">
 	</form>
