Chat, sending message, session->user

--- a/ChatAppWeb/WebContent/chat.html
+++ b/ChatAppWeb/WebContent/chat.html
@@ -1,6 +1,6 @@
 <div ng-controller = "chatController">
 	
-	<p>Welcome, {{username}}</p>
+	<p>Welcome, {{username}} {{loggedUsers}}</p>
 	<button type="button" class="btn btn-default" ng-click="logout()">Logout</button>
 		
 	<div>
