--- a/ChatAppWeb/WebContent/chat.html
+++ b/ChatAppWeb/WebContent/chat.html
@@ -10,7 +10,11 @@
 		</select>
 	</div>
 	
-	<textarea class="form-control" rows="10" cols="50" id="messages" readonly="true"></textarea>
+	<div>
+		<ul>
+	        <li ng-repeat="message in messages">{{message.from.username}}: <b>{{message.subject}}</b> - {{message.content}}</li>
+	    </ul>
+    </div>
 	
 	<form ng-submit="sendMessage()">
 		<input type="text" ng-model="subject" placeholder="Subject" class="form-control" required>
