--- a/ChatAppWeb/WebContent/chat.html
+++ b/ChatAppWeb/WebContent/chat.html
@@ -18,7 +18,7 @@
 	
 	<form ng-submit="sendMessage()">
 		<input type="text" ng-model="subject" placeholder="Subject" class="form-control" required>
-		<textarea rows="5" type="text" ng-model="message" placeholder="Message" class="form-control" required></textarea>
+		<textarea rows="5" type="text" ng-model="content" placeholder="Message" class="form-control" required></textarea>
 		<input type="submit" value="Send" class="btn btn-primary">
 	</form>
 </div>
